# topospam

./: .gitignore  Dockerfile  README.md  TopoSPAMExamples.ipynb  TopoSpam.py  createbrewenv.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
.ipynb_checkpoints/: TopoSPAMExamples-checkpoint.ipynb
ExampleNotebooks/: ActiveFluid.ipynb  SpringLattice.ipynb  meshGeneration.ipynb  meshGeneration_3d.ipynb  meshGeneration_flat.ipynb  trianglemesh.vtk
cpp/: Active2d.cpp  SpringLattice.cpp  example.mk  makefile
cpp/vertex_model3d_monolayer/: Makefile  makefile  monolayer.mk
cpp/vertex_model3d_monolayer/accessories/: Makefile  Makefileold
cpp/vertex_model3d_monolayer/accessories/examples/: analyze.cpp
cpp/vertex_model3d_monolayer/accessories/src/: Writer.hpp
cpp/vertex_model3d_monolayer/examples/: loadSpring.cpp  organoid.cpp  simple.cpp
cpp/vertex_model3d_monolayer/src/: Edge.cpp  Edge.hpp  Tissue.hpp  Vertex.cpp
cpp/vertex_model3d_monolayer/src/minimizer/: EnergyMinimizerAbstract.cpp  (+2 more)
examples/: ActiveFluid.ipynb  SpringLattice.ipynb  VertexModel.ipynb
examples/mesh_utils_spring_lattice/: meshGeneration_3d.ipynb  meshGeneration_flat.ipynb  sphere_single_layer.pkl
notebooks/: SpringLatticeExamples.ipynb  TopoSPAMExamples.ipynb
src/: SpringLattice.py  TopoSpam.py  __init__.py  active_fluid_2d.py  mesh_methods.py  spring_lattice.py  topospam.py  vertex_model.py
src/TopoSPAM/: SpringLattice.py  TopoSPAM copy.py  TopoSPAM.py  TopoSpam.py  __init__.py  mesh_methods.py  methods.py
src/TopoSPAM/meshes/: circle.pkl
(+33 files in other folders)
