[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TopoSPAM"
version = "0.0.1"
authors = [
  { name="Abhinav Singh", email="absingh@mpi-cbg.de" },
  { name="Abhijeet Krishna", email="krishna@mpi-cbg.de"}
]
description = "A package to perform active matter simulations using OpenFPM."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abhinavsns/TopoSPAM"
"Bug Tracker" = "https://github.com/abhinavsns/TopoSPAM/issues"