[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TopoSPAM"
version = "0.0.1"
authors = [
  { name="Abhinav Singh", email="absingh@mpi-cbg.de" },
  { name="Abhijeet Krishna", email="krishna@mpi-cbg.de"}
]
description = "A package to perform active matter simulations using OpenFPM."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL-3.0",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/abhinavsns/TopoSPAM"
"Bug Tracker" = "https://github.com/abhinavsns/TopoSPAM/issues"